Add configurable Telegram delivery mode with polling runtime

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ APP_PORT=8000
 TELEGRAM_BOT_TOKEN=replace_me
 TELEGRAM_WEBHOOK_SECRET=replace_me
 TELEGRAM_WEBHOOK_PATH=/webhook/telegram
+TELEGRAM_DELIVERY_MODE=webhook
+TELEGRAM_POLLING_DROP_PENDING_UPDATES=true
 
 DATABASE_URL=postgresql+psycopg://postgres:postgres@db:5432/reminder_bot
 OPENAI_API_KEY=replace_me
