--- a/deploy/.env.prod.example
+++ b/deploy/.env.prod.example
@@ -7,6 +7,8 @@ APP_LOG_LEVEL=INFO
 TELEGRAM_BOT_TOKEN=replace_me
 TELEGRAM_WEBHOOK_SECRET=replace_me
 TELEGRAM_WEBHOOK_PATH=/webhook/telegram
+TELEGRAM_DELIVERY_MODE=polling
+TELEGRAM_POLLING_DROP_PENDING_UPDATES=true
 
 OPENAI_API_KEY=replace_me
 OPENAI_MODEL=gpt-4.1-mini
